altered directory spelling

--- a/camelclub.html
+++ b/camelclub.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="media/camel-logo.png">
+    <link rel="icon" href="Media/camel-logo.png">
     <title>Camel Club</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Changa+One&family=Merriweather+Sans:wght@300;400&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
       <nav class="navbar navbar-expand-md navbar-dark fixed-top trans-black">
         <div class="container">
           <a class="navbar-brand nav-link mx-2 p-0" href="#">
-            <img src="media/camelclublogo-transparent.png" alt="Camel Club" id="logo">
+            <img src="Media/camelclublogo-transparent.png" alt="Camel Club" id="logo">
           </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,28 +57,28 @@
       
       <div id="scroller" class="img_container">
         <div class="scrolling">
-          <img src="media/examples/3.png" width="auto" height="200" alt="S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/4.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/5.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/6.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/7.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/8.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/9.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/10.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/11.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/13.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/14.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/15.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/16.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/17.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/18.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/19.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/20.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/21.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/22.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/23.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/24.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="media/examples/25.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/3.png" width="auto" height="200" alt="S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/4.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/5.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/6.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/7.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/8.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/9.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/10.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/11.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/13.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/14.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/15.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/16.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/17.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/18.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/19.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/20.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/21.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/22.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/23.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/24.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/examples/25.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
         </div>
       </div>
 
