further updated directory spelling

--- a/camelclub.html
+++ b/camelclub.html
@@ -57,28 +57,28 @@
       
       <div id="scroller" class="img_container">
         <div class="scrolling">
-          <img src="Media/examples/3.png" width="auto" height="200" alt="S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/4.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/5.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/6.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/7.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/8.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/9.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/10.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/11.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/13.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/14.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/15.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/16.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/17.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/18.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/19.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/20.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/21.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/22.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/23.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/24.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/examples/25.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/3.png" width="auto" height="200" alt="S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/4.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/5.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/6.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/7.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/8.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/9.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/10.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/11.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/13.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/14.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/15.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/16.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/17.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/18.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/19.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/20.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/21.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/22.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/23.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/24.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/Examples/25.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
         </div>
       </div>
 
@@ -235,7 +235,7 @@
             <p>Confirming policy IDs is a good practice to  ensure that you are getting an authentic Camel Club CNFT. </p>
             
             <div class="input-group mb-2 var-copy">
-              <p class="mr-4">Project ID:</p>
+              <p class="mr-4">Project ID: &emsp;</p>
               <span class="input-group-text">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#808080" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg>
               </span>
