--- a/camelclub.html
+++ b/camelclub.html
@@ -57,28 +57,28 @@
       
       <div id="scroller" class="img_container">
         <div class="scrolling">
-          <img src="Media/Examples/3.png" width="auto" height="200" alt="S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/4.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/5.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/6.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/7.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/8.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/9.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/10.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/11.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/13.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/14.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/15.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/16.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/17.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/18.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/19.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/20.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/21.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/22.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/23.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/24.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/Examples/25.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/3.png" width="auto" height="200" alt="S1 Camel" class="rounded-element px-2">
+          <img src="Media/4.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/5.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/6.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/7.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/8.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/9.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/10.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/11.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/13.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/14.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/15.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/16.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/17.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/18.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/19.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/20.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/21.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/22.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/23.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/24.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/25.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
         </div>
       </div>
 
