--- a/camelclub.html
+++ b/camelclub.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="Media/camel-logo.png">
     <title>Camel Club</title>
+    <meta name="theme-color" content="#c8a36f"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Changa+One&family=Merriweather+Sans:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -57,28 +58,28 @@
       
       <div id="scroller" class="img_container">
         <div class="scrolling">
-          <img src="Media/3.png" width="auto" height="200" alt="S1 Camel" class="rounded-element px-2">
-          <img src="Media/4.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/5.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/6.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/7.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/8.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/9.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/10.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/11.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/13.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/14.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/15.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/16.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/17.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/18.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/19.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/20.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/21.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/22.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/23.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/24.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
-          <img src="Media/25.png" width="auto" height="200" alt=" S1 Camel" class="rounded-element px-2">
+          <img src="Media/3.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/4.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/5.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/6.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/7.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/8.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/9.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/10.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/11.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/13.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/14.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/15.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/16.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/17.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/18.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/19.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/20.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/21.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/22.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/23.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/24.png" width="auto" height="200" class="rounded-element px-2">
+          <img src="Media/25.png" width="auto" height="200" class="rounded-element px-2">
         </div>
       </div>
 
