--- a/camelclub.html
+++ b/camelclub.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="Media/camel-logo.png">
     <title>Camel Club</title>
-    <meta name="theme-color" content=" #d19d5d"/>
+    <meta name="theme-color" content="#161615"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Changa+One&family=Merriweather+Sans:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -52,7 +52,7 @@
       <section id="landing" class="d-flex align-items-center m-0 pt-0">
         <div id="landing-text" class="container text-center my-auto">
           <h1>Camel Club</h1>
-          <p class="pb-4 mx-auto" style="max-width: 600px;">The Camel Club is a collection of over 5000 camels that live on the Cardano blockchain. With over 110 attributes available, each camel is completely unique. Who will you collect?</p>
+          <p class="pb-4 mx-auto" style="max-width: 600px;">The Camel Club is a collection of over 5000 camels that live on the Cardano blockchain. With over 130+ attributes available, each camel is completely unique. Who will you collect?</p>
         </div>
       </section>
       
