--- a/camelclub.html
+++ b/camelclub.html
@@ -183,7 +183,6 @@
                     <li> Growing our Camel Club community through recruitment and involment initiatives</li>
                     <li> Camel Club 3D Launch</li>
                     <li> Airdrop special lottery-style NFT prizes to holders from all three caravans; S1, Wall of Fame and 3D. </li>
-                    <li> Begin mutant camel club design work</li>
                   </ul>
                 </li>
             
@@ -193,7 +192,7 @@
                   <ul class="lightfw">
                     <li>TBD</li>
                     <li>Exploring potential marketplace and metaverse opportunities</li>
-                    <li>Partnerships and collaboration with other cnft projects</li>
+                    <li>Partnerships and collaboration with other CNFT projects</li>
                   </ul>
                 </li>
               </ul>
