--- a/camelclub.html
+++ b/camelclub.html
@@ -133,7 +133,7 @@
             sytle="min-height: 30%">
               <div class="card-body">
                 <h5 class="card-title"> Camel Club: 3D</h5>
-                <p class="card-text"> Our beloved camels in 3-D with 100+ original traits. Coming soon </p>
+                <p class="card-text"> Our beloved camels in 3-D with 130+ original traits. Coming soon </p>
               </div>
             </div>
 
@@ -150,7 +150,7 @@
         <div class="row m-0 px-lg-4 text-center">
           <div class="col-12 lg-px-4">
             <h1>Roadmap</h1>
-            <p class="lightfw mx-auto" style="max-width: 600px;"> We take pride in our transparency and only promise what we can and will deliver. 
+            <p class="lightfw mx-auto" style="max-width: 600px;"> We take pride in our transparency and will only promise what we can and will deliver. 
               This roadmap is updated in real time. Check back for updates. </p>
           </div>
         </div>
@@ -172,8 +172,8 @@
                   <h5 class="fw-bold mr-1 mb-0"> Initial Drops </h5>
                   <p class=" mb-2 pt-0 lightfw">2021 & 2022</p>
                   <ul class="lightfw">
-                    <li>Launched Camel Club and donate 5% of proceeds. Began designing of our limited edition parody charity series - Camel Club: Wall of Fame</li>
-                    <li> Launched Camel Club: Wall of Fame and donate 50% of proceeds</li>
+                    <li>Launched Camel Club and donated 5% of the proceeds. Began designing our limited edition parody charity series - Camel Club: Wall of Fame</li>
+                    <li> Launched Camel Club: Wall of Fame and donated 50% of its proceeds</li>
                   </ul>
                 </li>
             
