--- a/camelclub.html
+++ b/camelclub.html
@@ -108,7 +108,7 @@
         <div class="row m-0 px-lg-4">
           <div class="col-12">
             <h1>Meet the Caravan</h1>
-            <p class="lightfw">With 200+ traits, and 3D coming soon, each camel is completely unique and with it comes exclusive membership access to the Camel Club. 
+            <p class="lightfw">With over a hundred traits, and 3D coming soon, each camel is completely unique and with it comes exclusive membership access to the Camel Club. 
               The herd is always growing, here's what its looked like through the seasons.</p>
           </div>
         </div>
