--- a/camelclub.html
+++ b/camelclub.html
@@ -26,7 +26,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav ml-auto">
-              <a class="nav-item nav-link mx-3" href="#meetthecaravan">About</a>
+              <a class="nav-item nav-link mx-3" href="#about">About</a>
               <a class="nav-item nav-link mx-3" href="#roadmap">Roadmap</a>
               <a class="nav-item nav-link mx-3" href="#trade">Trade</a>
               <a class="nav-item nav-link mx-3" href="#FAQ">FAQ</a>
@@ -52,11 +52,11 @@
       <section id="landing" class="d-flex align-items-center m-0 pt-0">
         <div id="landing-text" class="container text-center my-auto">
           <h1>Camel Club</h1>
-          <p class="pb-4 mx-auto" style="max-width: 600px;">The Camel Club is a collection of over 5000 camels that live on the Cardano blockchain. With over 130+ attributes available, each camel is completely unique. Who will you collect?</p>
+          <p class="pb-4 mx-auto" style="max-width: 600px;">The Camel Club is a collection of over 5000 camels that live on the Cardano blockchain. With 100+ traits, and 3D coming soon, each camel is completely unique and comes with exclusive membership access to the Camel Club.</p>
         </div>
       </section>
       
-      <div id="scroller" class="img_container">
+      <div id="scroller" class="img_container pb-4">
         <div class="scrolling">
           <img src="Media/4.webp" width="auto" height="200" class="rounded-element px-2">
           <img src="Media/5.webp" width="auto" height="200" class="rounded-element px-2">
@@ -103,33 +103,32 @@
         </div>
       </div>
 
-      <a class="anchor" id="meetthecaravan"></a>
+      <a class="anchor" id="about"></a>
       <section class="p-sm-4 py-4 m-4 black rounded-element text-center">
         <div class="row m-0 px-lg-4">
           <div class="col-12">
-            <h1>Meet the Caravan</h1>
-            <p class="lightfw">With over a hundred traits, and 3D coming soon, each camel is completely unique and with it comes exclusive membership access to the Camel Club. 
-              The herd is always growing, here's what its looked like through the seasons.</p>
+            <h1>The Caravan</h1>
+            <p class="lightfw"> Our caravan of camels is always growing, here's what its looked like through the seasons.</p>
           </div>
         </div>
 
-        <div id="season" class="row text-center m-0 pl-4 pr-4 pb-4">
+        <div id="season" class="row text-center m-0 pl-md-4 pr-md-4 pb-md4">
           <div class="col-md-7 col-sm-12">
-            <div id="OG" class="card my-4 mt-0 var-season rounded-element border border-secondary black chosen-season"
+            <div id="OG" class="card  mb-3 mt-0 var-season rounded-element border border-secondary black chosen-season"
             sytle="min-height: 30%">
               <div class="card-body">
                 <h5 class="card-title">Original (OG) Drop</h5>
                 <p class="card-text">The original camels that started it all</p>
             </div>
             </div>
-            <div id="WOF" class="card my-4 var-season rounded-element border border-secondary black"
+            <div id="WOF" class="card my-3 var-season rounded-element border border-secondary black"
             sytle="min-height: 30%">
               <div class="card-body">
                 <h5 class="card-title">Camel Club: Wall of Fame</h5>
                 <p class="card-text">Our limited edition parody collection that helped us raise 10,000₳ for charity </p>
             </div>
             </div>
-            <div id="3D" class="card my-4 var-season rounded-element border border-secondary black"
+            <div id="3D" class="card my-3 var-season rounded-element border border-secondary black"
             sytle="min-height: 30%">
               <div class="card-body">
                 <h5 class="card-title"> Camel Club: 3D</h5>
