--- a/camelclub.html
+++ b/camelclub.html
@@ -52,7 +52,7 @@
       <section id="landing" class="d-flex align-items-center m-0 pt-0">
         <div id="landing-text" class="container text-center my-auto">
           <h1>Camel Club</h1>
-          <p class="pb-4 mx-auto" style="max-width: 600px;">The Camel Club is a collection of over 5000 camels that live on the Cardano blockchain. With 100+ traits, and 3D coming soon, each camel is completely unique and comes with exclusive membership access to the Camel Club.</p>
+          <p class="pb-4 mx-auto" style="max-width: 600px;">The Camel Club is a collection of over 5000 camels that live on the Cardano blockchain. With 100+ traits, each camel is completely unique and comes with exclusive membership access to the Camel Club.</p>
         </div>
       </section>
       
@@ -108,12 +108,12 @@
         <div class="row m-0 px-lg-4">
           <div class="col-12">
             <h1>The Caravan</h1>
-            <p class="lightfw"> Our caravan of camels is always growing, here's what its looked like through the seasons.</p>
+            <p class="lightfw"> Our caravan of camels is always growing, 3D Camels are on their way! Here's what its looked like through the seasons.</p>
           </div>
         </div>
 
-        <div id="season" class="row text-center m-0 pl-md-4 pr-md-4 pb-md4">
-          <div class="col-md-7 col-sm-12">
+        <div id="season" class="row text-center m-0 pl-sm-4 pr-sm-4 pb-sm-4">
+          <div class="col-md-6 col-sm-12">
             <div id="OG" class="card  mb-3 mt-0 var-season rounded-element border border-secondary black chosen-season"
             sytle="min-height: 30%">
               <div class="card-body">
@@ -137,7 +137,7 @@
             </div>
 
           </div>
-          <div  class="col-md-5 col-sm-12 align-items-center my-auto">
+          <div  class="col-md-6 col-sm-12 align-items-center my-auto">
             <img id="season-img" src="Media/OG.png" class="img-fluid rounded-element" style="max-height: 400px; transition: background-color 0.6s ease;" alt="Sample OG Camel">
           </div>
         </div>
