--- a/camelclub.html
+++ b/camelclub.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="Media/camel-logo.png">
     <title>Camel Club</title>
-    <meta name="theme-color" content=" #d19d5d"/>
+    <meta name="theme-color" content="#161615"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Changa+One&family=Merriweather+Sans:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -15,10 +15,10 @@
 </head>
 <body class="mx-0">
   <header class="site-header">
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top trans-black">
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top black">
         <div class="container">
           <a class="navbar-brand nav-link mx-2 p-0" href="#">
-            <img src="Media/camelclublogo-transparent.png" alt="Camel Club" id="logo">
+            <img id=logo src="Media/cclogo.svg" alt="Camel Club" height="48px" class="pt-2">
           </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
