--- a/camelclub.html
+++ b/camelclub.html
@@ -103,10 +103,10 @@
       </div>
 
       <a class="anchor" id="about"></a>
-      <section class="p-sm-2 py-4 m-4 black rounded-element text-center">
+      <section class="p-sm-3 py-3 m-3 black rounded-element text-center">
         <div class="row m-0 px-lg-4">
           <div class="col-12">
-            <h1>The Caravan</h1>
+            <h1>Seasons</h1>
             <p class="lightfw"> Our caravan of camels is always growing, 3D Camels are on their way! Here's what its looked like through the seasons.</p>
           </div>
         </div>
@@ -144,7 +144,7 @@
 
 
       <a class="anchor" id="roadmap"></a>
-      <section class="p-sm-2 py-4 m-4 black rounded-element">
+      <section class="p-sm-3 py-3 m-3 black rounded-element">
         <div class="row m-0 px-lg-4 text-center">
           <div class="col-12 lg-px-4">
             <h1>Roadmap</h1>
