--- a/camelclub.html
+++ b/camelclub.html
@@ -111,7 +111,7 @@
           </div>
         </div>
 
-        <div id="season" class="row text-center m-0 pl-sm-4 pr-sm-4 pb-sm-4">
+        <div id="season" class="row text-center m-0 pl-4 pr-4 pb-4">
           <div class="col-md-6 col-sm-12">
             <div id="OG" class="card  mb-3 mt-0 var-season rounded-element border border-secondary black chosen-season"
             sytle="min-height: 30%">
