--- a/camelclub.html
+++ b/camelclub.html
@@ -137,7 +137,7 @@
 
           </div>
           <div  class="col-md-6 col-sm-12 align-items-center my-auto">
-            <img id="season-img" src="Media/OG.png" class="img-fluid rounded-element" style="max-height: 400px; transition: background-color 0.6s ease;" alt="Sample OG Camel">
+            <img id="season-img" src="Media/OG.png" class="img-fluid rounded-element" style="max-height: 400px" alt="Sample OG Camel">
           </div>
         </div>
       </section>
