--- a/camelclub.html
+++ b/camelclub.html
@@ -103,15 +103,15 @@
       </div>
 
       <a class="anchor" id="about"></a>
-      <section class="p-sm-3 py-3 m-3 black rounded-element text-center">
+      <section class="py-3 p-md-4 m-3 m-md-4 black rounded-element text-center">
         <div class="row m-0 px-lg-4">
           <div class="col-12">
             <h1>Seasons</h1>
-            <p class="lightfw"> Our caravan of camels is always growing, 3D Camels are on their way! Here's what its looked like through the seasons.</p>
+            <p class="lightfw"> Our caravan of camels is growing. Here's what its looked like through the seasons.</p>
           </div>
         </div>
 
-        <div id="season" class="row text-center m-0 pl-3 pr-3 pb-3">
+        <div id="season" class="row text-center m-0 p-3 p-md-4">
           <div class="col-md-6 col-sm-12">
             <div id="OG" class="card  mb-3 mt-0 var-season rounded-element border border-secondary black chosen-season"
             sytle="min-height: 30%">
@@ -144,7 +144,7 @@
 
 
       <a class="anchor" id="roadmap"></a>
-      <section class="p-sm-3 py-3 m-3 black rounded-element">
+      <section class="p-3 p-md-4 m-3 m-md-4 black rounded-element">
         <div class="row m-0 px-lg-4 text-center">
           <div class="col-12 lg-px-4">
             <h1>Roadmap</h1>
