--- a/camelclub.html
+++ b/camelclub.html
@@ -156,7 +156,7 @@
         <div class="row pl-4">
           <div class="col-12 pl-4 px-lg-4">
             <section>
-              <ul class="timeline">
+              <ul class="timeline pb-0">
                 <li class="timeline-item">
                   <h5 class="fw-bold mx-1 mb-0">Camel Club Beginings</h5>
                   <p class="mb-2 pt-0 lightfw">Late 2020</p>
