--- a/camelclub.html
+++ b/camelclub.html
@@ -113,7 +113,7 @@
 
         <div id="season" class="row text-center m-0 p-3 p-md-4">
           <div class="col-md-6 col-sm-12">
-            <div id="OG" class="card  mb-3 mt-0 var-season rounded-element border border-secondary black chosen-season"
+            <div id="OG" class="card  mb-3 mt-0 var-season rounded-element border border-secondary black active-season"
             sytle="min-height: 30%">
               <div class="card-body">
                 <h5 class="card-title">Original (OG) Drop</h5>
