--- a/camelclub.html
+++ b/camelclub.html
@@ -112,25 +112,22 @@
         </div>
 
         <div id="season" class="row text-center m-0 p-3 p-md-4">
-          <div class="col-md-6 col-sm-12">
-            <div id="OG" class="card  mb-3 mt-0 var-season rounded-element border border-secondary black active-season"
-            sytle="min-height: 30%">
+          <div class="col-md-6 col-sm-12 my-auto py-auto">
+            <div id="OG" class="card  mb-3 mt-0 var-season rounded-element border border-secondary black active-season">
               <div class="card-body">
-                <h5 class="card-title">Original (OG) Drop</h5>
+                <h5 class="m-0">Original (OG) Drop</h5>
                 <p class="card-text">The original camels that started it all</p>
             </div>
             </div>
-            <div id="WOF" class="card my-3 var-season rounded-element border border-secondary black"
-            sytle="min-height: 30%">
+            <div id="WOF" class="card my-3 var-season rounded-element border border-secondary black">
               <div class="card-body">
-                <h5 class="card-title">Camel Club: Wall of Fame</h5>
+                <h5 class="m-0">Camel Club: Wall of Fame</h5>
                 <p class="card-text">Our limited edition parody collection that helped us raise 10,000₳ for charity </p>
             </div>
             </div>
-            <div id="3D" class="card my-3 var-season rounded-element border border-secondary black"
-            sytle="min-height: 30%">
+            <div id="3D" class="card my-3 var-season rounded-element border border-secondary black">
               <div class="card-body">
-                <h5 class="card-title"> Camel Club: 3D</h5>
+                <h5 class="m-0"> Camel Club: 3D</h5>
                 <p class="card-text"> Our beloved camels in 3-D with 130+ original traits. Coming soon </p>
               </div>
             </div>
