--- a/camelclub.html
+++ b/camelclub.html
@@ -112,8 +112,8 @@
         </div>
 
         <div id="season" class="row text-center m-0 p-3 p-md-4">
-          <div class="col-md-6 col-sm-12 my-auto py-auto">
-            <div id="OG" class="card  mb-3 mt-0 var-season rounded-element border border-secondary black active-season">
+          <div class="col-md-6 col-sm-12 my-auto">
+            <div id="OG" class="card mb-3 mt-0 py-2 var-season rounded-element border border-secondary black active-season">
               <div class="card-body">
                 <h5 class="m-0">Original (OG) Drop</h5>
                 <p class="card-text">The original camels that started it all</p>
