--- a/camelclub.html
+++ b/camelclub.html
@@ -113,7 +113,7 @@
 
         <div id="season" class="row text-center m-0 p-3 p-md-4">
           <div class="col-md-6 col-sm-12 my-auto">
-            <div id="OG" class="card mb-3 mt-0 py-2 var-season rounded-element border border-secondary black active-season">
+            <div id="OG" class="card mb-3 mt-0 py-3 var-season rounded-element border border-secondary black active-season">
               <div class="card-body">
                 <h5 class="m-0">Original (OG) Drop</h5>
                 <p class="card-text">The original camels that started it all</p>
@@ -125,7 +125,7 @@
                 <p class="card-text">Our limited edition parody collection that helped us raise 10,000₳ for charity </p>
             </div>
             </div>
-            <div id="3D" class="card my-3 var-season rounded-element border border-secondary black">
+            <div id="3D" class="card my-3 py-2 var-season rounded-element border border-secondary black">
               <div class="card-body">
                 <h5 class="m-0"> Camel Club: 3D</h5>
                 <p class="card-text"> Our beloved camels in 3-D with 130+ original traits. Coming soon </p>
