--- a/camelclub.html
+++ b/camelclub.html
@@ -122,7 +122,7 @@
             <div id="WOF" class="card my-3 var-season rounded-element border border-secondary black">
               <div class="card-body">
                 <h5 class="m-0">Camel Club: Wall of Fame</h5>
-                <p class="card-text">Our limited edition parody collection that helped us raise 10,000₳ for charity </p>
+                <p class="card-text">Our limited-edition parody collection that helped us raise 10,000₳ for charity </p>
             </div>
             </div>
             <div id="3D" class="card my-3 py-2 var-season rounded-element border border-secondary black">
@@ -310,7 +310,7 @@
             <h6>Where can I get more information?</h6>
           </div>
           <div class="col-md-6 col-sm-12 text-justified lightfw">
-            <p>Specifics can be found in our <a href="#">docs</a></p>
+            <p>Specifics and how to get started can be found in our <a href="#">docs</a></p>
           </div>
         </div>
 
