--- a/camelclub.html
+++ b/camelclub.html
@@ -25,9 +25,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav ml-auto">
-              <a class="nav-item nav-link mx-3" href="#about">About</a>
+              <a class="nav-item nav-link mx-3" href="#seasons">Seasons</a>
               <a class="nav-item nav-link mx-3" href="#roadmap">Roadmap</a>
-              <a class="nav-item nav-link mx-3" href="#trade">Trade</a>
+              <a class="nav-item nav-link mx-3" href="#about">About</a>
               <a class="nav-item nav-link mx-3" href="#FAQ">FAQ</a>
               <div class="form-inline my-0">
                 <a class="nav-item nav-link mx-3 pb-0" href="https://www.discord.com/invite/ETfhby4j7m" target="_blank">
@@ -102,12 +102,12 @@
         </div>
       </div>
 
-      <a class="anchor" id="about"></a>
+      <a class="anchor" id="seasons"></a>
       <section class="py-3 p-md-4 m-3 m-md-4 black rounded-element text-center">
         <div class="row m-0 px-lg-4">
           <div class="col-12">
             <h1>Seasons</h1>
-            <p class="lightfw"> Our caravan of camels is growing. Here's what its looked like through the seasons.</p>
+            <p> Our caravan of camels is growing. Here's what its looked like through the seasons.</p>
           </div>
         </div>
 
@@ -128,7 +128,7 @@
             <div id="3D" class="card my-3 py-2 var-season rounded-element border border-secondary black">
               <div class="card-body">
                 <h5 class="m-0"> Camel Club: 3D</h5>
-                <p class="card-text"> Our beloved camels in 3-D with 130+ original traits. Coming soon </p>
+                <p class="card-text"> Our beloved now camels in 3-D with 130+ original traits. Coming soon! </p>
               </div>
             </div>
 
@@ -138,7 +138,6 @@
           </div>
         </div>
       </section>
-
 
       <a class="anchor" id="roadmap"></a>
       <section class="p-3 p-md-4 m-3 m-md-4 black rounded-element">
@@ -197,11 +196,40 @@
       </section>
 
 
-      <a class="anchor" id="trade"></a>
-      <section class="rounded-top-element white">
-        <div class="row m-0 pt-4 pl-4 pr-4">
+      <a class="anchor" id="about"></a>
+      <section class="py-4 pt-4 m-3 m-md-4 black rounded-element">
+        <div class="row m-0 px-4">
           <div class="col-12">
-            <h1>Where to Buy</h1>
+            <h1>The Team</h1>
+          </div>
+        </div>
+        <div class="row m-0 pt-2 px-4 text-center">
+          <div class="col-sm-12 col-lg-6 my-1">
+            <div class="card rounded-element border border-secondary mb-4 black">
+              <div class="card-body">
+                <img class="rounded-circle mb-2 border-element p-2" src="Media/5.webp" alt="@skycamel" width="200px" height="200px">
+                <h5 class="card-text camel-text">@skycamel</h5>
+                <p>Project Management</p>
+                <p class="lightfw">He's in business meetings all day and in the Camel Club all night</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-lg-6 my-1">
+            <div  class="card rounded-element border border-secondary mb-4 black">
+              <div class="card-body">
+                <img class="rounded-circle mb-2 border-element p-2" src="Media/7.webp" alt="@camelita" width="200px" height="200px">
+                <h5 class="card-text camel-text">@camelita</h5>
+                <p>Design & Development</p>
+                <p class="lightfw"> Artist and software developer when she's not herding camels</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="rounded-top-element white">
+        <div class="row m-0 pt-4 px-4">
+          <div class="col-12">
+            <h1>Where to Trade</h1>
           </div>
         </div>
 
