--- a/camelclub.html
+++ b/camelclub.html
@@ -207,17 +207,17 @@
           <div class="col-sm-12 col-lg-6 my-1">
             <div class="card rounded-element border border-secondary mb-4 black">
               <div class="card-body">
-                <img class="rounded-circle mb-2 border-element p-2" src="Media/5.webp" alt="@skycamel" width="200px" height="200px">
+                <img class="rounded-circle my-2 border-element p-2" src="Media/skycamel.webp" alt="@skycamel" width="250px" height="250px">
                 <h5 class="card-text camel-text">@skycamel</h5>
                 <p>Project Management</p>
-                <p class="lightfw">He's in business meetings all day and in the Camel Club all night</p>
+                <p class="lightfw">He's in business meetings all day, but in the Camel Club all night</p>
               </div>
             </div>
           </div>
           <div class="col-sm-12 col-lg-6 my-1">
             <div  class="card rounded-element border border-secondary mb-4 black">
               <div class="card-body">
-                <img class="rounded-circle mb-2 border-element p-2" src="Media/7.webp" alt="@camelita" width="200px" height="200px">
+                <img class="rounded-circle my-2 border-element p-2" src="Media/camelita.webp" alt="@camelita" width="250px" height="250px">
                 <h5 class="card-text camel-text">@camelita</h5>
                 <p>Design & Development</p>
                 <p class="lightfw"> Artist and software developer when she's not herding camels</p>
