--- a/camelclub.html
+++ b/camelclub.html
@@ -113,19 +113,19 @@
 
         <div id="season" class="row text-center m-0 p-3 p-md-4">
           <div class="col-md-6 col-sm-12 my-auto">
-            <div id="OG" class="card mb-3 mt-0 py-3 var-season rounded-element border border-secondary black active-season">
+            <div id="OG" class="card mb-3 mt-0 py-2 var-season rounded-element thin-border black active-season">
               <div class="card-body">
                 <h5 class="m-0">Original (OG) Drop</h5>
                 <p class="card-text">The original camels that started it all</p>
             </div>
             </div>
-            <div id="WOF" class="card my-3 var-season rounded-element border border-secondary black">
+            <div id="WOF" class="card my-3 var-season rounded-element thin-border black">
               <div class="card-body">
                 <h5 class="m-0">Camel Club: Wall of Fame</h5>
                 <p class="card-text">Our limited-edition parody collection that helped us raise 10,000₳ for charity </p>
             </div>
             </div>
-            <div id="3D" class="card my-3 py-2 var-season rounded-element border border-secondary black">
+            <div id="3D" class="card my-3 py-2 var-season rounded-element thin-border black">
               <div class="card-body">
                 <h5 class="m-0"> Camel Club: 3D</h5>
                 <p class="card-text"> Our beloved now camels in 3-D with 130+ original traits. Coming soon! </p>
@@ -204,8 +204,8 @@
           </div>
         </div>
         <div class="row m-0 pt-2 px-4 text-center">
-          <div class="col-sm-12 col-lg-6 my-1">
-            <div class="card rounded-element border border-secondary mb-4 black">
+          <div class="col-md-6 my-1">
+            <div class="card rounded-element thin-border mb-4 black">
               <div class="card-body">
                 <img class="rounded-circle my-2 border-element p-2" src="Media/skycamel.webp" alt="@skycamel" width="200px" height="200px">
                 <h5 class="card-text camel-text">@skycamel</h5>
@@ -214,8 +214,8 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-12 col-lg-6 my-1">
-            <div  class="card rounded-element border border-secondary mb-4 black">
+          <div class="col-md-6 my-1">
+            <div  class="card rounded-element thin-border mb-4 black">
               <div class="card-body">
                 <img class="rounded-circle my-2 border-element p-2" src="Media/camelita.webp" alt="@camelita" width="200px" height="200px">
                 <h5 class="card-text camel-text">@camelita</h5>
