--- a/camelclub.html
+++ b/camelclub.html
@@ -112,7 +112,7 @@
         </div>
 
         <div id="season" class="row text-center m-0 p-3 p-md-4">
-          <div class="col-md-6 col-sm-12 my-auto">
+          <div class="col-md-6 my-auto">
             <div id="OG" class="card mb-3 mt-0 py-3 px-2 var-season rounded-element thin-border black active-season">
               <div class="card-body">
                 <h5 class="m-0">Original (OG) Drop</h5>
@@ -133,7 +133,7 @@
             </div>
 
           </div>
-          <div  class="col-md-6 col-sm-12 align-items-center my-auto">
+          <div  class="col-md-6 align-items-center my-auto">
             <img id="season-img" src="Media/OG.png" class="img-fluid rounded-element" style="max-height: 400px" alt="Sample OG Camel">
           </div>
         </div>
@@ -204,20 +204,20 @@
           </div>
         </div>
         <div class="row m-0 pt-2 px-4 text-center">
-          <div class="col-md-6 my-1">
+          <div class="col-sm-6 my-1">
             <div class="card rounded-element thin-border mb-4 black">
               <div class="card-body">
-                <img class="rounded-circle my-2 border-element p-2" src="Media/skycamel.webp" alt="@skycamel" width="200px" height="200px">
+                <img class="rounded-circle my-2 border-element p-2" src="Media/skycamel.webp" alt="@skycamel" width="50%" height="50%">
                 <h5 class="card-text camel-text">@skycamel</h5>
                 <p>Project Management</p>
                 <p class="lightfw">He's in business meetings all day, but in the Camel Club all night</p>
               </div>
             </div>
           </div>
-          <div class="col-md-6 my-1">
+          <div class="col-sm-6 my-1">
             <div  class="card rounded-element thin-border mb-4 black">
               <div class="card-body">
-                <img class="rounded-circle my-2 border-element p-2" src="Media/camelita.webp" alt="@camelita" width="200px" height="200px">
+                <img class="rounded-circle my-2 border-element p-2" src="Media/camelita.webp" alt="@camelita" width="50%" height="50%">
                 <h5 class="card-text camel-text">@camelita</h5>
                 <p>Design & Development</p>
                 <p class="lightfw"> Artist and software developer when she's not herding camels</p>
