--- a/camelclub.html
+++ b/camelclub.html
@@ -197,36 +197,7 @@
 
 
       <a class="anchor" id="about"></a>
-      <section class="py-4 pt-4 m-3 m-md-4 black rounded-element">
-        <div class="row m-0 px-4">
-          <div class="col-12">
-            <h1>The Team</h1>
-          </div>
-        </div>
-        <div class="row m-0 pt-2 px-4 text-center">
-          <div class="col-sm-6 my-1">
-            <div class="card rounded-element thin-border mb-4 black">
-              <div class="card-body">
-                <img class="rounded-circle my-2 border-element p-2" src="Media/skycamel.webp" alt="@skycamel" width="50%" height="50%">
-                <h5 class="card-text camel-text">@skycamel</h5>
-                <p>Project Management</p>
-                <p class="lightfw">He's in business meetings all day, but in the Camel Club all night</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 my-1">
-            <div  class="card rounded-element thin-border mb-4 black">
-              <div class="card-body">
-                <img class="rounded-circle my-2 border-element p-2" src="Media/camelita.webp" alt="@camelita" width="50%" height="50%">
-                <h5 class="card-text camel-text">@camelita</h5>
-                <p>Design & Development</p>
-                <p class="lightfw"> Artist and software developer when she's not herding camels</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="rounded-top-element white">
+      <section class=" mx-3 mx-md-4 text-center rounded-top-element white">
         <div class="row m-0 pt-4 px-4">
           <div class="col-12">
             <h1>Where to Trade</h1>
@@ -261,9 +232,38 @@
 
         </div>
       </section>
+      <section class="py-4 pt-4 mx-3 mx-md-4 mb-3 mb-md-4 text-center black rounded-bottom-element">
+        <div class="row m-0 px-4">
+          <div class="col-12">
+            <h1>The Team</h1>
+          </div>
+        </div>
+        <div class="row m-0 pt-2 px-4">
+          <div class="col-md-6 my-1">
+            <div class="rounded-element mb-4 black float-md-right">
+              <div class="card-body p-0">
+                <img class="rounded-circle my-2 border-element p-2" src="Media/skycamel.webp" alt="@skycamel" width="50%" height="50%" style="max-height: 200px; max-width: 200px;">
+                <h5 class="card-text camel-text">@skycamel</h5>
+                <p>Project Management</p>
+                <p class="lightfwwhite px-md-2">He's in business meetings all day, but in the Camel Club all night</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 my-1">
+            <div  class="rounded-element mb-4 black float-md-left">
+              <div class="card-body p-0">
+                <img class="rounded-circle my-2 border-element p-2" src="Media/camelita.webp" alt="@camelita" width="50%" height="50%" style="max-height: 200px; max-width: 200px;">
+                <h5 class="card-text camel-text">@camelita</h5>
+                <p>Design & Development</p>
+                <p class="lightfwwhite px-md-2"> Artist and software developer when she's not herding camels</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <a class="anchor" id="FAQ"></a>
-      <section class="p-md-4 py-4 black">
+      <section class="p-md-4 py-4 black rounded-top-element thin-border">
         <div class="row m-0 px-4">
           <div class="col-12">
             <h1>FAQ</h1>
