--- a/camelclub.html
+++ b/camelclub.html
@@ -263,7 +263,7 @@
       </section>
 
       <a class="anchor" id="FAQ"></a>
-      <section class="p-md-4 py-4 black rounded-top-element thin-border">
+      <section class="p-md-4 py-4 black rounded-top-element">
         <div class="row m-0 px-4">
           <div class="col-12">
             <h1>FAQ</h1>
