--- a/camelclub.html
+++ b/camelclub.html
@@ -197,7 +197,7 @@
 
 
       <a class="anchor" id="about"></a>
-      <section class=" mx-3 mx-md-4 text-center rounded-top-element white">
+      <section id="trade" class=" mx-md-4 text-center rounded-top-element white">
         <div class="row m-0 pt-4 px-4">
           <div class="col-12">
             <h1>Where to Trade</h1>
@@ -232,7 +232,7 @@
 
         </div>
       </section>
-      <section class="py-4 pt-4 mx-3 mx-md-4 mb-3 mb-md-4 text-center black rounded-bottom-element">
+      <section id="theteam" class="py-4 pt-4 mx-3 mx-md-4 mb-3 mb-md-4 text-center black rounded-bottom-element">
         <div class="row m-0 px-4">
           <div class="col-12">
             <h1>The Team</h1>
@@ -240,7 +240,7 @@
         </div>
         <div class="row m-0 pt-2 px-4">
           <div class="col-md-6 my-1">
-            <div class="rounded-element mb-4 black float-md-right">
+            <div class="rounded-element mb-4 black">
               <div class="card-body p-0">
                 <img class="rounded-circle my-2 border-element p-2" src="Media/skycamel.webp" alt="@skycamel" width="50%" height="50%" style="max-height: 200px; max-width: 200px;">
                 <h5 class="card-text camel-text">@skycamel</h5>
@@ -250,7 +250,7 @@
             </div>
           </div>
           <div class="col-md-6 my-1">
-            <div  class="rounded-element mb-4 black float-md-left">
+            <div  class="rounded-element mb-4 black">
               <div class="card-body p-0">
                 <img class="rounded-circle my-2 border-element p-2" src="Media/camelita.webp" alt="@camelita" width="50%" height="50%" style="max-height: 200px; max-width: 200px;">
                 <h5 class="card-text camel-text">@camelita</h5>
