--- a/camelclub.html
+++ b/camelclub.html
@@ -197,7 +197,7 @@
 
 
       <a class="anchor" id="about"></a>
-      <section id="trade" class=" mx-md-4 text-center rounded-top-element white">
+      <section class=" mx-3 mx-md-4 text-center rounded-top-element white">
         <div class="row m-0 pt-4 px-4">
           <div class="col-12">
             <h1>Where to Trade</h1>
@@ -240,22 +240,22 @@
         </div>
         <div class="row m-0 pt-2 px-4">
           <div class="col-md-6 my-1">
-            <div class="rounded-element mb-4 black">
+            <div class="rounded-element mb-4 black float-sm-right">
               <div class="card-body p-0">
-                <img class="rounded-circle my-2 border-element p-2" src="Media/skycamel.webp" alt="@skycamel" width="50%" height="50%" style="max-height: 200px; max-width: 200px;">
+                <img class="rounded-circle my-2 border-element" src="Media/skycamel.webp" alt="@skycamel" width="50%" height="50%" style="max-height: 200px; max-width: 200px;">
                 <h5 class="card-text camel-text">@skycamel</h5>
                 <p>Project Management</p>
-                <p class="lightfwwhite px-md-2">He's in business meetings all day, but in the Camel Club all night</p>
+                <p class="lightfw px-md-2">He's in business meetings all day, but in the Camel Club all night</p>
               </div>
             </div>
           </div>
           <div class="col-md-6 my-1">
-            <div  class="rounded-element mb-4 black">
+            <div  class="rounded-element mb-4 black float-sm-left">
               <div class="card-body p-0">
-                <img class="rounded-circle my-2 border-element p-2" src="Media/camelita.webp" alt="@camelita" width="50%" height="50%" style="max-height: 200px; max-width: 200px;">
+                <img class="rounded-circle my-2 border-element" src="Media/camelita.webp" alt="@camelita" width="50%" height="50%" style="max-height: 200px; max-width: 200px;">
                 <h5 class="card-text camel-text">@camelita</h5>
                 <p>Design & Development</p>
-                <p class="lightfwwhite px-md-2"> Artist and software developer when she's not herding camels</p>
+                <p class="lightfw px-md-2"> Artist and software developer when she's not herding camels</p>
               </div>
             </div>
           </div>
