--- a/camelclub.html
+++ b/camelclub.html
@@ -15,7 +15,7 @@
 </head>
 <body class="mx-0">
   <header class="site-header">
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top black">
+    <nav class="navbar navbar-expand-md fixed-top black">
       <div class="container">
         <a class="navbar-brand nav-link mx-2 p-0" href="#">
           <img id=logo src="Media/cclogo.svg" alt="Camel Club" height="48px" class="pt-2">
@@ -199,7 +199,7 @@
 
 
     <a class="anchor" id="about"></a>
-    <section class=" mx-3 mx-md-4 text-center rounded-top-element white">
+    <section id="trade" class="mx-3 mx-md-4 text-center rounded-top-element white">
       <div class="row m-0 pt-4 px-4">
         <div class="col-12">
           <h1>Where to Trade</h1>
